[project]
name = "z-score-binomial-distribution"
version = "0.1.0"
description = "Estudo sobre Z-Score e Distribuição Binomial"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
